# StructuredLightReconstruction

./: .gitignore  CMakeLists.txt
blender/: DLP Simulator.py
dataset/: camera_calibration.json  color_pattern_info.json  color_phase_info.json  projector_calibration.json
docs/ColorCoded/: README.md
docs/MultiFrequencyPhaseShift/: README.md
example/: ColorCodedTest.cpp  MultiFrequencyTest.cpp
src/StructuredLight/: ColorCoded.cpp  ColorCoded.h  DebugImageExport.cpp  DebugImageExport.h  MultiFrequencyPhaseShift.cpp  MultiFrequencyPhaseShift.h
src/StructuredLight/Core/: ColorCoded.cpp  ColorCoded.h  DebugImageExport.cpp  DebugImageExport.h  MultiFrequencyPhaseShift.cpp  MultiFrequencyPhaseShift.h
